Added rest of game logic for now.

--- a/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj
+++ b/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="base64.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sha1.cpp" />
     <ClCompile Include="websocket.cpp" />
