--- a/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj.filters
+++ b/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="websocket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base64.h">
