--- a/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj
+++ b/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj
@@ -123,6 +123,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="base64.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="sha1.h" />
     <ClInclude Include="websocket.h" />
   </ItemGroup>
