--- a/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj.filters
+++ b/ICS167-SocketDemonstration/demo4-server/demo4-server.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="websocket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
